se realizo un cambio en un texto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Bienvenido a mi pagina</h1>
         <nav class="navbar">
             <ul>
-                <li><a href="#acerca">Acerca de nosotros</a></li>
+                <li><a href="#acerca">Acerca de mi</a></li>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#quien-soy">¿Quién soy?</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -96,7 +96,7 @@
     <div class="info-contacto">
         <h3>Otras formas de contacto</h3>
         <p><span class="icono">📧</span> Email: romanromero2133@gmail.com</p>
-        <p><span class="icono">📱</span> WhatsApp: +54 9 11 xxxx-xxxx</p>
+        <p><span class="icono">📱</span> WhatsApp: +54 9 11 3373-2305</p>
         <p><span class="icono">📍</span> Ubicación: Buenos Aires, Argentina, Del Viso</p>
         <p><span class="icono">🥊</span> Gimnasio: [Squadra Farinelli]</p>
     </div>
